...
            android:padding="10dp"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:id="@+id/passport"
                android:background="@drawable/circle_button"
                android:elevation="7dp"
                android:src="@drawable/passport"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="16dp"
...
